force-app/main/default/objects/Glossary_Item__c/Glossary_Item__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - used as a Glossary to capture the details of terms, assets, roles &amp; responsibilities, etc., and their details as they relate the project.</description>
    <label>Glossary Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Glossary Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>