force-app/main/default/objects/Glossary_Item__c/fields/Parent_Term__c.field-meta.xml
<CustomField>
    <fullName>Parent_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to identify the relationship between a Primary terms, and its secondary counterparts</description>
    <inlineHelpText>Used to identify related Primary terms for common secondary terms</inlineHelpText>
    <label>Parent Term</label>
    <referenceTo>Glossary_Item__c</referenceTo>
    <relationshipName>Terms</relationshipName>
    <type>Lookup</type>
</CustomField>