force-app/main/default/objects/Glossary_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Used by the Project Management to indicate which terms are adopted for official use on the project, over their related counterparts.

Be aware that creating a Field Dependency on this field negates the ability to edit in a List View. This may limit Term management.</description>
    <inlineHelpText>Used by the Project Management to indicate which terms are adopted for official use on the project, over their related counterparts.</inlineHelpText>
    <label>Project Usage Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Official</fullName>
            </value>
            <value>
                <fullName>Unofficial</fullName>
                <default>true</default>
                <label>Unofficial</label>
            </value>
            <value>
                <fullName>Discouraged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>