force-app/main/default/objects/Glossary_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Glossary Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Term</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Role &amp; Responsibility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>