force-app/main/default/objects/Glossary_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Usage_Type__c</columns>
    <columns>Definition__c</columns>
    <columns>Source__c</columns>
    <columns>Status__c</columns>
    <columns>Parent_Term__c</columns>
    <columns>Other_Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>