force-app/main/default/objects/Glossary_Item__c/listViews/Asset.listView-meta.xml
<ListView>
    <fullName>Asset</fullName>
    <columns>NAME</columns>
    <columns>Usage_Type__c</columns>
    <columns>Definition__c</columns>
    <columns>Source__c</columns>
    <columns>Status__c</columns>
    <columns>Parent_Term__c</columns>
    <columns>Other_Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Asset</value>
    </filters>
    <label>Asset Glossary</label>
</ListView>